--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy
-scikit-learn
-matplotlib
+numpy~=2.2.6
+scikit-learn~=1.7.2
+matplotlib~=3.10.7
 kaggle
 kagglehub
-pandas
+pandas~=2.3.3
+seaborn~=0.13.2
